# Karabiner-DriverKit-VirtualHIDDevice

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.json  .swift-format  DEVELOPMENT.md  Makefile  NEWS.md  README.md  XNU.md  make-package.sh  version.json
.github/workflows/: ci.yml
appendix/HIDManagerTool/: Makefile  project.yml
appendix/SMAppServiceExample/: Makefile
client-examples/virtual-keyboard-client/: Makefile  cget-requirements.txt  entitlements.plist  main.cpp
client/examples/: Makefile
docs/plantuml/: Makefile  components.plantuml
examples/: Makefile
examples/SMAppServiceExample/: Makefile  project.yml
examples/virtual-hid-device-service-client/: .gitignore  Makefile  cget-requirements.txt  project.yml
files/LaunchDaemons/: org.pqrs.Karabiner-DriverKit-Daemon.plist  org.pqrs.Karabiner-DriverKit-VirtualHIDDeviceClient.plist  org.pqrs.Karabiner-VirtualHIDDevice-Daemon.plist
files/scripts/: uninstall.sh  uninstall_core.sh  uninstaller.applescript
pkginfo/: .gitignore  Distribution.xml.in  pkgbuild.plist
pkginfo/Scripts/: postinstall  preinstall
scripts/: clean-launch-service-database.swift  clean-launch-services-database.swift  codesign-pkg.sh  get_version.py  setpermissions.sh  update-version.py  update-version.sh  update_version.py
src/: Makefile  cget-requirements.txt  project.yml
tests/: .gitignore  Makefile
tests/src/hid_report/: CMakeLists.txt  Makefile  buttons_test.cpp  buttons_test.hpp  keys_test.cpp  keys_test.hpp  modifiers_test.cpp  modifiers_test.hpp  sizeof_test.cpp  sizeof_test.hpp  test.cpp
(+176 files in other folders)
